# behaviac-3.6.40

./: .gitignore  LICENSE  README.md
Dev/: CMakeLists.txt  README.md  history.txt  version.txt
Dev/Demos/Demo_01/: Demo_01.cpp
Dev/Demos/Demo_01/behaviac/behaviac_generated/types/internal/: FirstAgent.cpp
Dev/Demos/Demo_02/: Demo_02.cpp
Dev/Demos/Demo_02/behaviac/behaviac_generated/behaviors/: behaviac_generated_behaviors.h
Dev/Demos/Demo_02/behaviac/behaviac_generated/types/internal/: FirstAgent.cpp  FirstAgent.h  behaviac_agent_member_visitor.h  behaviac_agent_meta.cpp  behaviac_agent_meta.h
Dev/Demos/Demo_02/behaviac/exported/: FirstBT.xml
Dev/Demos/Demo_02/behaviac/exported/meta/: Demo_02.meta.xml
Dev/Demos/Demo_04/: Demo_04.cpp
Dev/Demos/Demo_04/behaviac/behaviac_generated/behaviors/: behaviac_generated_behaviors.cpp  behaviac_generated_behaviors.h
Dev/Demos/Demo_04/behaviac/behaviac_generated/types/internal/: FirstAgent.cpp  FirstAgent.h  behaviac_agent_member_visitor.h  behaviac_agent_meta.cpp  behaviac_agent_meta.h
Dev/Demos/Demo_04/behaviac/exported/: maintree_task.xml
Dev/inc/behaviac/common/: _config.h  defines.h
Dev/test/btunittest/: main.cpp
Dev/test/btunittest/Others/: btloadtest.cpp
Dev/test/demo_running/: demo_running.cpp
Dev/tools/designer/BehaviacDesigner/: BehaviacDesigner.csproj
Dev/tools/designer/BehaviacDesignerBase/: BehaviacDesignerBase.csproj
Dev/tools/designer/Plugins/PluginBehaviac/: PluginBehaviac.csproj
Doc/: ProjectCreation.txt
Doc/Tutorial/CMake/: CMake_Tips_001__PROJECT.txt  CMake_Tips_002__CXX_STANDARD.txt  CMake_Tips_003__OutputDir.txt
Doc/Tutorial/CMake/Resource/: 001_CMakeLists.txt
